
Moqui Framework Release Notes

===========================================================================
Release 1.6.3 - TBD
===========================================================================

Moqui Framework 1.6.3 is a minor new feature and bug fix release.

TODO

New Features


Bug Fixes

- Fixed issue with REST and other JSON request body parameters where single
  entry lists were unwrapped to just the entry by the canonicalization code
- Fixed NPE in EntityFind.oneMaster() when the master value isn't found,
  now returns null with no error; fixes moqui-runtime issue #18

===========================================================================
Release 1.6.2 - 26 Mar 2016
===========================================================================

Moqui Framework 1.6.2 is a minor new feature and bug fix release.

This release is all about performance improvements, bug fixes, library
updates and cleanups. There are a number of minor new features like better
multi-tenant handling (and security), optionally loading data on start if
the DB is empty, more flexible handling of runtime Moqui Conf XML location,
database support and transaction management, and so on.

Non Backward Compatible Changes

- Entity field types are somewhat more strict for database operations; this
  is partly for performance reasons and partly to avoid database errors
  that happen only on certain databases (ie some allow passing a String for
  a Timestamp, others don't; now you have to use a Timestamp or other date
  object); use EntityValue.setString or similar methods to do data
  conversions higher up
- Removed the TenantCurrency, TenantLocale, TenantTimeZone, and
  TenantCountry entities; they aren't generally used and better not to have
  business settings in these restricted technical config entities

New Features

- Many performance improvements based on profiling; cached entities finds
  around 6x faster, non cached around 3x; screen rendering also faster